# pocket-twin

./: .env.example  .gitignore  FIREBASE_SETUP.md  RUNPOD_LIVEPORTRAIT_SETUP.md  RUNPOD_SERVERLESS_SETUP.md  RUNPOD_START_COMMANDS.md  app.json  google-services.json  metro.config.js  package-lock.json  package.json  poll_worker.py  storage.rules  tsconfig.json
.github/workflows/: build-create-worker.yml  build-latentsync.yml  download-wan-models.yml
app/: _layout.tsx  buy-coins.tsx  index.tsx  profile.tsx  upload.tsx
app/(auth)/: login.tsx  (+1 more)
functions/: package-lock.json  package.json
latentsync-runpod-worker/: Dockerfile  download_checkpoints.sh  handler.py  requirements.txt  start.sh
live-avatar-a2f-adapter/: .env.example  README.md  main.py  models.py  service.py  start_runpod_adapter.sh
live-avatar-a2f-upstream/: .env.example  README.md  main.py  models.py  requirements.txt  service.py  setup_runpod_sdk.sh  start_upstream.sh  write_runpod_env.sh
live-avatar-a2f-upstream/bridge/sdk-patch/audio2face-sdk/source/samples/pocket-twin-a2f-bridge/: CMakeLists.txt  main.cpp
live-avatar-backend/: .env.example  .env.runpod.example  AUDIO2FACE_SETUP.md  README.md  audio2face.py  latentsync_infer.py  main.py  musetalk_infer.py  requirements.txt  runtime.py  schemas.py  start_new_pod.sh  start_runpod_backend.sh  test_tps.py
liveportrait-runpod-worker/: README.md  example_infer.py  handler.py  start_local_worker.sh  your_infer.py
modal-worker/: app.py  requirements.txt
wan-runpod-worker/: Dockerfile  download_checkpoints.sh  handler.py  requirements.txt  start.sh
(+35 files in other folders)
